k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: work-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: work-api
  template:
    metadata:
      labels:
        app: work-api
    spec:
      containers:
      - name: work-api
        image: work-api-native
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
