k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: work-api
  labels:
    app: work-api
spec:
  selector:
    app: work-api
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
